change styles for button in cart

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -951,13 +951,12 @@
                                             aria-atomic="false" aria-relevant="additions text"
                                             class="css-7pg0cj-a11yText"></span>
                                             <select class="custom">
-                                                <option value="">ДОСТАВКА НА СКЛАД В МОСКВЕ</option>
-                                                <option value="">ДОСТАВКА В ГОРОД ПРОЖИВАНИЯ СЕМЬИ</option>
-                                                <option value="">ДОСТАВКА ИНТЕРНЕТ-МАГАЗИНОМ</option>
-                                                <option value="">ВОЛОНТЕРСКАЯ ДОСТАВКА</option>
-                                                <option value="">КОМБИНИРОВАННАЯ ДОСТАВКА</option>
-                                                <option value="">ДОСТАВКА В ПУНКТ ВЫДАЧИ ОЗОН В ГОРОДЕ ПРОЖИВАНИЯ СЕМЬИ (АДРЕС УТОЧНЯЙТЕ У ВОЛОНТЕРА)</option>
-
+                                                <option value="">Доставка на склад в Москве</option>
+                                                <option value="">Доставка в город проживания семьи</option>
+                                                <option value="">Доставка интернет-магазином</option>
+                                                <option value="">Волонтерская доставка</option>
+                                                <option value="">Комбинированная доставка</option>
+                                                <option value="">Доставка в пункт выдачи Озон в городе проживания семьи (адрес уточняйте у волонтера)</option>
                                             </select>
                                     </div>
                                 </div>
