add number in notification button

--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -100,7 +100,8 @@
                         </div>
                         <div class="Header_headerButtons">
                             <span class="Header_bellBtn dropdown-button" aria-describedby="popup-17">
-                                <div class="Header_notificationButton"><button
+                                <div class="Header_notificationButton">
+                                    <button
                                         class="Icon_iconButtonRoot  Icon_xSmall undefined "><svg
                                             xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" fill="none"
                                             viewBox="0 0 30 38" class="Icon_iconAsset">
@@ -110,7 +111,9 @@
                                             <path class="Icon_iconPath"
                                                 d="M18.3359 33.7231C17.557 34.8947 16.225 35.6668 14.7128 35.6668C13.2005 35.6668 11.8685 34.8947 11.0896 33.7231"
                                                 stroke="#292929" stroke-width="2.7" stroke-linecap="round"></path>
-                                        </svg></button>
+                                        </svg>
+                                    </button>
+                                    <div class="Icon_counter Icon_counterLeft">2</div>
                                 </div>
                                 <div id="popup-root">
                                     <div class="popup-content " role="tooltip" id="popup-2"
