centering buttons in carousel

--- a/pages/about.html
+++ b/pages/about.html
@@ -1133,7 +1133,7 @@
                     </a>
                     <div class="Carousel_carouselRoot _active" data-tab="giver">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
+                            class="Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1253,7 +1253,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
+                        <button class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none"
                                 viewBox="0 0 40 40" class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1264,7 +1264,7 @@
                     </div>
                     <div class="Carousel_carouselRoot " data-tab="volunteer">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1377,7 +1377,7 @@
                             </div>
                         </div>
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1388,7 +1388,7 @@
                     </div>
                     <div class="Carousel_carouselRoot" data-tab="family">
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile prev"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn prev"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
@@ -1499,7 +1499,7 @@
                             </div>
                         </div>
                         <button
-                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile next"><svg
+                            class=" Generic_iconRoot Generic_outline Generic_medium Carousel_hideOnMobile ReviewCarousel_btn next"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="56" height="56" fill="none" viewBox="0 0 40 40"
                                 class="Generic_clrIcon">
                                 <path fill="var(--primary)" class="Generic_iconPath"
