--- a/pages/about.html
+++ b/pages/about.html
@@ -2104,13 +2104,13 @@
                                         <div class="react-responsive-modal-modal PopUp_modal" role="dialog" aria-modal="true" data-testid="modal" tabindex="-1" style="animation: 300ms ease 0s 1 normal none running react-responsive-modal-modal-in; background: var(--white); box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 64px, rgba(0, 0, 0, 0.06) 0px 0px 20px, rgba(0, 0, 0, 0.06) 0px 0px 8px, rgba(0, 0, 0, 0.04) 0px 0px 4px; border-radius: 24px;">
                                             <div>
                                                 <div class="Reports_viewerWrap">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
-                                                    <img src="../../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
+                                                    <img src="../assets/report.jpg" alt="">
                                                 </div>
                                             </div>
                                             <button class="react-responsive-modal-closeButton" data-testid="close-button"><svg width="28" height="28" viewBox="0 0 36 36" data-testid="close-icon">
