--- a/pages/families/families.html
+++ b/pages/families/families.html
@@ -95,7 +95,7 @@
                                      </div>
                                  </div>
                             </button>
-                            <a class="Header_headerLink " id="2" href="../news-and-reports.html">новости</a>
+                            <a class="Header_headerLink " id="2" href="../news-and-reports.html">деятельность</a>
                             <a class="Header_headerLink " id="3" href="../volunteer.html">волонтёрам</a>
                             <a class="Header_headerLink " id="4" href="../giver.html">дарителям</a>
                             <a class="Header_headerLink" id="6" href="../family.html">семьям</a>
