--- a/pages/news-and-reports.html
+++ b/pages/news-and-reports.html
@@ -279,16 +279,13 @@
                                 <p class="Action_time">18.06.2024</p>
                             </div>
                             <p class="Action_title">Начинаем приём заявок на акцию – «Портфель доброты».💼💞</p>
-                            <div style="bottom: 36px; left: 32px; position: absolute; z-index: 20;">
-                                <div class=""><a href="./news.html" 
-                                    class="Icon_iconButtonRoot Icon_textButton " style="display: flex;">подробнее<svg
-                                        xmlns="http://www.w3.org/2000/svg" width="28px" height="28px" fill="none" viewBox="0 0 40 40"
-                                        class="Icon_iconAsset">
-                                        <path fill="#FF3351" class="Icon_iconPath"
-                                            d="M8.333 21.667H28.1l-6.05 7.266a1.668 1.668 0 102.567 2.134l8.333-10c.056-.08.106-.163.15-.25 0-.084.083-.134.117-.217.075-.191.115-.395.116-.6a1.666 1.666 0 00-.116-.6c0-.083-.084-.133-.117-.217a1.996 1.996 0 00-.15-.25l-8.333-10a1.666 1.666 0 00-1.284-.6 1.667 1.667 0 00-1.283 2.734l6.05 7.266H8.333a1.667 1.667 0 100 3.334z">
-                                        </path>
-                                    </svg></a></div>
+                            <div style="bottom:36px;left:32px;position:absolute;z-index:20">
+                                <div class="">
+                                    <a href="http://pp.org.ru" target="_blank" class="Icon_iconButtonRoot__Y4HG2 Icon_textButton__C8uAt undefined " style="display:flex">
+                                        <img src="../assets/other.svg">
+                                    </a>
                                 </div>
+                            </div>
                             <div class="Action_bg"
                                 style="background-image: url(&quot;../assets/bg_grid_1.png&quot;);"></div>
                         </div>
@@ -387,16 +384,14 @@
                                 <p class="Action_time">18.06.2024</p>
                             </div>
                             <p class="Action_title">Начинаем приём заявок на акцию – «Портфель доброты».💼💞</p>
-                            <div style="bottom: 36px; left: 32px; position: absolute; z-index: 20;">
-                                <div class=""><a href="https://vk.com/bfpodaripodarok?w=wall-621396_1713" target="_blank"
-                                    class="Icon_iconButtonRoot Icon_textButton " style="display: flex;">подробнее<svg
-                                        xmlns="http://www.w3.org/2000/svg" width="28px" height="28px" fill="none" viewBox="0 0 40 40"
-                                        class="Icon_iconAsset">
-                                        <path fill="#FF3351" class="Icon_iconPath"
-                                            d="M8.333 21.667H28.1l-6.05 7.266a1.668 1.668 0 102.567 2.134l8.333-10c.056-.08.106-.163.15-.25 0-.084.083-.134.117-.217.075-.191.115-.395.116-.6a1.666 1.666 0 00-.116-.6c0-.083-.084-.133-.117-.217a1.996 1.996 0 00-.15-.25l-8.333-10a1.666 1.666 0 00-1.284-.6 1.667 1.667 0 00-1.283 2.734l6.05 7.266H8.333a1.667 1.667 0 100 3.334z">
-                                        </path>
-                                    </svg></a></div>
+                           
+                            <div style="bottom:36px;left:32px;position:absolute;z-index:20">
+                                <div class="">
+                                    <a href="http://pp.org.ru" target="_blank" class="Icon_iconButtonRoot__Y4HG2 Icon_textButton__C8uAt undefined " style="display:flex">
+                                        <img src="../assets/other.svg">
+                                    </a>
                                 </div>
+                            </div>
                             <div class="Action_bg"
                                 style="background-image: url(&quot;../assets/bg_grid_1.png&quot;);"></div>
                         </div>
@@ -419,6 +414,12 @@
                                 style="background-image: url(&quot;../assets/bg_grid_2.png&quot;);"></div>
                         </div>
                         
+                        <div style="width: 100%;">
+                            <button
+                                class="Generic_responsive Generic_buttonRoot "
+                                style="margin: 0px auto;">показать ещё
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
