--- a/pages/feedback/feedback.html
+++ b/pages/feedback/feedback.html
@@ -580,8 +580,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="display: flex; justify-content: center;"><button class=" Generic_buttonRoot Generic_medium ">Показать ещё</button>
-                        </div>
+                        
+                        <center>
+                            <button
+                            class=" Generic_buttonRoot Generic_medium  ">Показать ещё</button>
+                        </center>
                     </div>
                 </div>
             </div>
